tests/baselines/reference/classExtendsShadowedConstructorFunction.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsShadowedConstructorFunction.ts(5,21): error TS2507: Type 'number' is not a constructor function type.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsShadowedConstructorFunction.ts (1 errors) ====
    class C { foo: string; }
    
    module M {
        var C = 1;
        class D extends C { // error, C must evaluate to constructor function
                        ~
!!! error TS2507: Type 'number' is not a constructor function type.
            bar: string;
        }
    }